--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -1,7 +1,7 @@
 .app-create-timer
 	flex 0 1 97.5%
 	{$flex-col}
-	margin-top 10px
+	overflow-y auto
 	align-items flex-start
 	justify-content center
 
