--- a/src/css/_header.styl
+++ b/src/css/_header.styl
@@ -19,9 +19,9 @@
 	display flex
 	align-items center
 	justify-content center
-	height 5vh
+	height $header-height
 	@media all and (orientation landscape)
-		height 7.5vh
+		height $header-height-landscape
 
 .header-logout-button
 	color $white
