--- a/src/css/_profile.styl
+++ b/src/css/_profile.styl
@@ -80,16 +80,11 @@
 	&:focus
 		outline none !important
 		box-shadow 0px 0px 1px 1px $white
-		
-.profile-input-toggle
-	flex 0 1 68.5%
-	height 6vmax !important
-	display flex
-	justify-content flex-start
 
 .visibility-toggle
-	flex 0 1 50px
+	flex 0 1 65%
 	padding 6px
+	border-radius 2px
 	display flex
 	align-items center
 	justify-content center
