--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -1,9 +1,8 @@
 .app-settings
-	margin-top 4vh
 	{$flex-col}
 	width 97.5%
 	align-items center
-	justify-content center
+	// justify-content center
 	
 .settings-div
 	width 90%
@@ -23,11 +22,11 @@
 	{$input}
 	flex 0 1 50%
 
-.settings-description
-	font-size 1.5rem
+.settings-heading
+	width 90%
 	margin-bottom 25px
 	color $white
 	text-align center
-	line-height 1.5rem
+	line-height 2.5rem
 	& > span
 		color $pink
