--- a/src/css/_variables.styl
+++ b/src/css/_variables.styl
@@ -1,6 +1,9 @@
 $title = Lato
 $content = 'Open Sans'
 
+$header-height = 4vh
+$header-height-landscape = 5vh
+
 $flex-row-wrap =
 	display flex
 	flex-wrap wrap
