couple more styling tweaks

--- a/src/css/_savedTimers.styl
+++ b/src/css/_savedTimers.styl
@@ -32,7 +32,8 @@
 	flex 0 1 22.5%
 	font-size 1rem
 	padding 0
-	border 1px solid $white
+	border 0
+	border-bottom 1px solid $white
 	align-self center
 	// margin 5px 0 !important
 	@media all and (orientation landscape)
