--- a/src/css/_profile.styl
+++ b/src/css/_profile.styl
@@ -1,5 +1,5 @@
-// .app-profile
-// 	height 80%
+.app-profile
+	{$flex-col}
 
 .app-profile__edit,
 .app-profile__static
@@ -8,7 +8,8 @@
 	{$flex-row-wrap}
 	justify-content center
 	align-items space-around
-	margin 10px 0
+	overflow-y auto
+	padding 10px 0
 	
 .profile-photo
 	flex 0 1 80%
@@ -44,12 +45,13 @@
 
 .profile-button
 	flex 0 1 75%
+	{$button}
 	margin-top 15px
-	color $white
-	font-size 1.25rem
-	border 2px solid $white
-	padding 15px
-	background-color transparent
+	// color $white
+	// font-size 1.25rem
+	// border 2px solid $white
+	// padding 10px
+	// background-color transparent
 	align-self flex-end
 	&:active,
 	&:focus
@@ -69,13 +71,15 @@
 
 .profile-save-button
 	flex 0 1 75%
-	align-self flex-end
-	color $white
-	font-size 1.25rem
-	border 2px solid $white
-	padding 15px
-	background-color transparent
-	align-self flex-end
+	{$button}
+	
+	// align-self flex-end
+	// color $white
+	// font-size 1.25rem
+	// border 2px solid $white
+	// padding 10px
+	// background-color transparent
+	// align-self flex-end
 	&:active,
 	&:focus
 		outline none !important
