--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -38,8 +38,6 @@
 	@media all and (orientation landscape)
 		html
 			font-size 10px
-			
-
 
 body {
 	background-color $black1
@@ -94,6 +92,8 @@ h4
 	@media all and (orientation landscape)
 		top $header-height-landscape
 		bottom 6.5vh
+	// &:last-child
+	// 	margin-bottom 20px !important
 	
 ul
 	list-style none
